<resources>
    <string name="app_name">RITMOFIT</string>
    <string name="home_title">WorkNow</string>
    <string name="home_subtitle">Bienvenido!</string>
    <string name="home_thirdtitle">Reservá. Entrená. Repetí</string>
    <string name="home_login">Inicia Sesión</string>
    <string name="home_signUp">Registrate</string>
    <string name="email_Input">Ingresa tu email:</string>
    <string name="email">Email:</string>
    <string name="nombre">Nombre:</string>
    <string name="confirma_contrasena">Confirma Contrasena:</string>
    <string name="contrasena">Contrasena:</string>
    <string name="todo">TODO</string>
    <string name="registrarse">Registrarse</string>
    <string name="inicia_sesion">Inicia Sesión</string>
    <string name="registrate">Registrate</string>
    <string name="ingresa_tu_email">Ingresa tu email:</string>
    <string name="enviar_codigo">Enviar Código</string>
    <string name="recuperar_acceso">Recuperar acceso</string>
    <string name="content_description_media" />
    <string name="title" />
    <string name="secondary_text" />
    <string name="supporting_text" />
    <string name="action_1" />
    <string name="action_2" />
    <string name="page_title">Gimnasio</string>
    <string name="home">Home</string>
    <string name="perfil">Perfil</string>
    <string name="historial">Historial</string>
    <string name="salir">Salir</string>
    <string name="proximas">proximas</string>
    <string name="todo_">TODO</string>
    <string name="registro_de_usuario">Registro de Usuario</string>
    <string name="iniciar_sesion">Inicio de Sesión</string>
    <string name="edad_opcional">Edad (opcional)</string>
    <string name="direccion_opcional">Dirección (opcional)</string>
    <string name="confirmar_email">Verificación de Email</string>
    <string name="codigo_enviado_a">Código enviado a:</string>
    <string name="Enter_4digit_code">Ingresa el código de verificación de 4 dígitos que recibiste por email:</string>
    <string name="_0000">0000</string>
    <string name="verificar_codigo">Verificar</string>
    <string name="reenviar_codigo">Reenviar Código</string>
    <string name="code_expire">Nota: El código expira en 15 minutos</string>

</resources>